tier5-kubernetes/deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-app
  namespace: final-app
spec:
  selector:
    app: final-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
